...
            }
            
            
            let alertModel = AlertModel(title: "Этот раунд окончен!",
                                        message: "Ваш результат: \(correctAnswers)/10\n\(recordMessage)",
                                        buttonText: "Сыграть ещё раз",
                                        accessibilityIdentifier: "Game results",
                                        compition: { [weak self] _ in
                guard let self = self else { return }
                
                self.restartGame()
                self.correctAnswers = 0
                
...
